// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/DropDownIcon renders correctly custom close 1`] = `
<View
  style={false}
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#353A45",
        "fontFamily": "Neotis",
        "fontSize": 24,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDownIcon renders correctly custom open 1`] = `
<View
  style={
    {
      "transform": [
        {
          "rotateX": "180deg",
        },
      ],
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#353A45",
        "fontFamily": "Neotis",
        "fontSize": 24,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDownIcon renders correctly standart close 1`] = `
<Text
  allowFontScaling={true}
  style={
    {
      "color": "#9BA1B0",
      "fontFamily": "Neotis",
      "fontSize": 24,
    }
  }
>
  
</Text>
`;

exports[`@lad-tech/mobydick-core/DropDownIcon renders correctly standart open 1`] = `
<Text
  allowFontScaling={true}
  style={
    {
      "color": "#9BA1B0",
      "fontFamily": "Neotis",
      "fontSize": 24,
      "transform": [
        {
          "rotateX": "180deg",
        },
      ],
    }
  }
>
  
</Text>
`;
